agrege carousel a las cervezas del index

--- a/paginas/birras.html
+++ b/paginas/birras.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../estilos.css">  
     <title>Birras</title>
 </head>
 <body>
-    <header><h1><a href="../index.html">Burgas</a></h1>
+    <header><h1><a href="../index.html"><span>B</span>ur<span>ga</span>s</a></h1>
         <nav class="barra">
             <ul>
                 <li><a href="../index.html" class="menu"><strong>INICIO</strong></a></li>
@@ -23,24 +24,27 @@
             <h3 class="preciosbirra">Precio: $350</h3>
             <section class="boxbirra" id="antares">
                 <div class="columnbirra">
-                    <img src="/STRANGE/amigosdelpino.png">
-                    <img src="/STRANGE/amigosdelpino.png">
-                    <img src="/STRANGE/amigosdelpino.png">
-                    <img src="/STRANGE/amigosdelpino.png">
-                    <img src="/STRANGE/amigosdelpino.png">
+                    <img src="/imagenesproyecto/pilsener.png" id="birra1">
+                    <img src="/imagenesproyecto/amber.png" id="birra2">
+                    <img src="/imagenesproyecto/sendero.png" id="birra3">
+                    <img src="/imagenesproyecto/weisse.png" id="birra4">
+                    <img src="/imagenesproyecto/ipa.png" id="birra5">
                 </div>
             </section>
         <h2 class="neon" id="menuneon">StrangeBrewing</h2>
             <h3 class="preciosbirra">Precio: $550</h3>
             <section class="boxbirra" id="strange">
                 <div class="columnbirra">
-                    <img src="../STRANGE/amigosdelpino.png">
-                    <img src="../STRANGE/amigosdelpino.png">
-                    <img src="../STRANGE/amigosdelpino.png">
-                    <img src="../STRANGE/amigosdelpino.png">
-                    <img src="../STRANGE/amigosdelpino.png">
+                    <img src="/imagenesproyecto/amigosdelpino.png" id="birra6">
+                    <img src="/imagenesproyecto/rubenyrubi.png" id="birra7">
+                    <img src="/imagenesproyecto/sentidocomun.png" id="birra8">
+                    <img src="/imagenesproyecto/amoramarillo.png" id="birra9">
+                    <img src="/imagenesproyecto/casimaduro.png" id="birra10">
                 </div>
             </section>
+            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 <footer>
     <i class="fa-brands fa-whatsapp" id="wsp"></i>
