agrege bootstrap a birras.html modifique menu

--- a/paginas/birras.html
+++ b/paginas/birras.html
@@ -20,26 +20,31 @@
             </ul>
         </nav>
     </header>
-        <h2 class="neon" id="menuneon">Antares</h2>
-            <h3 class="preciosbirra">Precio: $350</h3>
-            <section class="boxbirra" id="antares">
-                <div class="columnbirra">
-                    <img src="/imagenesproyecto/pilsener.png" id="birra1">
-                    <img src="/imagenesproyecto/amber.png" id="birra2">
-                    <img src="/imagenesproyecto/sendero.png" id="birra3">
-                    <img src="/imagenesproyecto/weisse.png" id="birra4">
-                    <img src="/imagenesproyecto/ipa.png" id="birra5">
+        <h2 class="neon birrasneon" >Patagonia</h2>
+            <h3 class="preciosbirra">Precio: $450</h3>
+            <section class="boxbirra" id="patagonia">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/pilsener.png" class="birrasbirra" id="birra1"><br>Tipo: Amber<br>Vol: 5.2%</div>
+                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/amber.png" class="birrasbirra" id="birra2"><br>Tipo: Amber<br>Vol: 4.5</div>
+                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/sendero.png" class="birrasbirra" id="birra3"><br>Tipo: Golden<br>Vol: 4.3%</div>
+                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/weisse.png" class="birrasbirra" id="birra4"><br>Tipo: Witbier<br>Vol: 5.1%</div>
+                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/ipa.png" class="birrasbirra" id="birra5"><br>Tipo: IPA<br>Vol: 6%</div>
                 </div>
+            </div>
             </section>
-        <h2 class="neon" id="menuneon">StrangeBrewing</h2>
+        <h2 class="neon birrasneon" >StrangeBrewing</h2>
             <h3 class="preciosbirra">Precio: $550</h3>
             <section class="boxbirra" id="strange">
-                <div class="columnbirra">
-                    <img src="/imagenesproyecto/amigosdelpino.png" id="birra6">
-                    <img src="/imagenesproyecto/rubenyrubi.png" id="birra7">
-                    <img src="/imagenesproyecto/sentidocomun.png" id="birra8">
-                    <img src="/imagenesproyecto/amoramarillo.png" id="birra9">
-                    <img src="/imagenesproyecto/casimaduro.png" id="birra10">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/amigosdelpino.png" class="birrasbirra" id="birra6"><br>Tipo: Neipa<br>Vol: 8.6%</div>
+                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/rubenyrubi.png" class="birrasbirra" id="birra7"><br>Tipo: SourAle<br>Vol: 4.4%</div>  
+                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/sentidocomun.png" class="birrasbirra" id="birra8"><br>Tipo: Ale<br>Vol: 4.9%</div>
+                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/amoramarillo.png" class="birrasbirra" id="birra9"><br>Tipo: NEIPA<br>Vol: 5.6%</div>
+                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/casimaduro.png" class="birrasbirra" id="birra10"><br>Tipo: SourAle<br>Vol: 4.4%</div>
+                    </div>
+                    
                 </div>
             </section>
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
