--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -47,12 +47,12 @@
             <div class="burgersmenu1 ingredientes ingredientes5">Lorem ipsum dolor sit amet.</div>
             <div class="burgersmenu1 burgersmenuimg burgermenu5" id="hamburguesa5">Vegan</div>
         </section>
-    <h2 class="neon" id="menuneon">Guarniciones</h2>
-    <h3 class="preciosbirra">Precio: $450</h3>
+    <h2 class="neon guarnicionneon">Guarniciones</h2>
+    <h3 class="preciosguar">Precio: $450</h3>
     <section class="guarnicion">
-        <div><img src="../burgers/papas.jpg" class="guar guar1"></div>
-        <div><img src="../burgers/papas.jpg" class="guar guar2"></div>
-        <div><img src="../burgers/papas.jpg" class="guar guar3"></div>
+        <div><img src="../imagenesproyecto/papas.jpg" class="guar guar1"></div>
+        <div><img src="../imagenesproyecto/papas.jpg" class="guar guar2"></div>
+        <div><img src="../imagenesproyecto/papas.jpg" class="guar guar3"></div>
     </section> 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
