--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
         </section>
         <section class="beers">
-            <a href="/paginas/birras.html#antares" class="neon beerlogoind1" id="antind">Antares</a>
+            <a href="/paginas/birras.html#patagonia" class="neon beerlogoind1" id="antind">Patagonia</a>
             <div id="carousel2"class="carousel slide beerindimg1 " data-ride="carousel" >
                 <div class="carousel-inner ">
                     <div class="carousel-item active carouselimgind">
@@ -90,27 +90,27 @@
                     <div class="carousel-item carouselimgind">
                         <img src="imagenesproyecto/amber.png" alt="amber">
                         <div class="carousel-caption beerindimg1">
-                            <a href="/paginas/menu.html#birra2" >
+                            <a href="/paginas/birras.html#birra2" >
                             <p class="neoncarouselb">Amber Lager</p></a>
                         </div>
                     </div>
                     <div class="carousel-item carouselimgind">
                         <img src="imagenesproyecto/sendero.png"  alt="sendero">
                         <div class="carousel-caption">
-                            <a href="/paginas/menu.html#birra3"><p class="neoncarouselb">Sendero Sur</p></a>
+                            <a href="/paginas/birras.html#birra3"><p class="neoncarouselb">Sendero Sur</p></a>
                         </div>
                     </div>
                     <div class="carousel-item carouselimgind">
                         <img src="imagenesproyecto/weisse.png"  alt="weisse">
                         <div class="carousel-caption">
-                            <a href="/paginas/menu.html#birra4">
+                            <a href="/paginas/birras.html#birra4">
                             <p class="neoncarouselb">Weisse</p></a>
                         </div>
                     </div>
                     <div class="carousel-item carouselimgind">
                         <img src="imagenesproyecto/ipa.png" alt="ipa">
                         <div class="carousel-caption">
-                            <a href="/paginas/menu.html#birra5">
+                            <a href="/paginas/birras.html#birra5">
                             <p class="neoncarouselb">Ipa</p></a>
                         </div>
                     </div>
@@ -136,28 +136,28 @@
                 <div class="carousel-item carouselimgind">
                     <img src="imagenesproyecto/rubenyrubi.png" alt="rubenyrubi" class="beersindimg">
                     <div class="carousel-caption beerindimg1">
-                        <a href="/paginas/menu.html#birra7">
+                        <a href="/paginas/birras.html#birra7">
                         <p class="neoncarouselb">Ruben y rubi</p></a>
                     </div>
                 </div>
                 <div class="carousel-item carouselimgind">
                     <img src="imagenesproyecto/sentidocomun.png"  alt="sentidocomun" class="beersindimg">
                     <div class="carousel-caption">
-                        <a href="/paginas/menu.html#birra8">
+                        <a href="/paginas/birras.html#birra8">
                         <p class="neoncarouselb">sentidocomun</p></a>
                     </div>
                 </div>
                 <div class="carousel-item carouselimgind">
                     <img src="imagenesproyecto/amoramarillo.png"  alt="amoramarillo" class="beersindimg">
                     <div class="carousel-caption">
-                        <a href="/paginas/menu.html#birra9">
+                        <a href="/paginas/birras.html#birra9">
                         <p class="neoncarouselb">Amor amarillo</p></a>
                     </div>
                 </div>
                 <div class="carousel-item carouselimgind">
                     <img src="imagenesproyecto/casimaduro.png" alt="casimaduro" class="beersindimg">
                     <div class="carousel-caption">
-                        <a href="/paginas/menu.html#birra10">
+                        <a href="/paginas/birras.html#birra10">
                         <p class="neoncarouselb">Casi maduro</p></a>
                     </div>
                 </div>
