bootstrap en  birras corregid

--- a/paginas/birras.html
+++ b/paginas/birras.html
@@ -23,26 +23,29 @@
         <h2 class="neon birrasneon" >Patagonia</h2>
             <h3 class="preciosbirra">Precio: $450</h3>
             <section class="boxbirra" id="patagonia">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/pilsener.png" class="birrasbirra" id="birra1"><br>Tipo: Amber<br>Vol: 5.2%</div>
-                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/amber.png" class="birrasbirra" id="birra2"><br>Tipo: Amber<br>Vol: 4.5</div>
-                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/sendero.png" class="birrasbirra" id="birra3"><br>Tipo: Golden<br>Vol: 4.3%</div>
-                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/weisse.png" class="birrasbirra" id="birra4"><br>Tipo: Witbier<br>Vol: 5.1%</div>
-                    <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/ipa.png" class="birrasbirra" id="birra5"><br>Tipo: IPA<br>Vol: 6%</div>
+                    <div class="col-lg-1 neonbirras"></div>
+                    <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/pilsener.png" class="birrasbirra" id="birra1"><p>Bohemian Pilsener<br>Tipo: Amber<br>Vol: 5.2%</p></div>
+                    <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/amber.png" class="birrasbirra" id="birra2"><p>Amber Lager<br>Tipo: Amber<br>Vol: 4.5</p></div>
+                    <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/sendero.png" class="birrasbirra" id="birra3"><p>Sendero Sur<br>Tipo: Golden<br>Vol: 4.3%</p></div>
+                    <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/weisse.png" class="birrasbirra" id="birra4"><p>Weisse<br>Tipo: Witbier<br>Vol: 5.1%</p></div>
+                    <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/ipa.png" class="birrasbirra" id="birra5"><p>Ipa del Refugio<br>Tipo: IPA<br>Vol: 6%</p></div>
                 </div>
             </div>
             </section>
         <h2 class="neon birrasneon" >StrangeBrewing</h2>
             <h3 class="preciosbirra">Precio: $550</h3>
             <section class="boxbirra" id="strange">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/amigosdelpino.png" class="birrasbirra" id="birra6"><br>Tipo: Neipa<br>Vol: 8.6%</div>
-                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/rubenyrubi.png" class="birrasbirra" id="birra7"><br>Tipo: SourAle<br>Vol: 4.4%</div>  
-                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/sentidocomun.png" class="birrasbirra" id="birra8"><br>Tipo: Ale<br>Vol: 4.9%</div>
-                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/amoramarillo.png" class="birrasbirra" id="birra9"><br>Tipo: NEIPA<br>Vol: 5.6%</div>
-                        <div class="col-lg-2 col-md-2 neonbirras"><img src="/imagenesproyecto/casimaduro.png" class="birrasbirra" id="birra10"><br>Tipo: SourAle<br>Vol: 4.4%</div>
+                        <div class="col-lg-1 neonbirras"></div>
+                        <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/amigosdelpino.png" class="birrasbirra" id="birra6"><p>Amigos del Pino<br>Tipo: Neipa<br>Vol: 8.6%</p></div>
+                        <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/rubenyrubi.png" class="birrasbirra" id="birra7"><p>Ruben y Rubi<br>Tipo: SourAle<br>Vol: 4.4%</p></div>  
+                        <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/sentidocomun.png" class="birrasbirra" id="birra8"><p>Sentido Comun<br>Tipo: Ale<br>Vol: 4.9%</p></div>
+                        <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/amoramarillo.png" class="birrasbirra" id="birra9"><p>Amor Amarillo<br>Tipo: NEIPA<br>Vol: 5.6%</p></div>
+                        <div class="col-lg-2 neonbirras"><img src="/imagenesproyecto/casimaduro.png" class="birrasbirra" id="birra10"><p>Casi Maduro<br>Tipo: SourAle<br>Vol: 4.4%</p></div>
+
                     </div>
                     
                 </div>
