--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -22,38 +22,45 @@
         </nav>
     </header>
     <section class="fotosnos">
-        <img src="/imagenesproyecto/foto1.jpg">
-        <img src="/imagenesproyecto/foto1.jpg">
-        <img src="/imagenesproyecto/foto1.jpg">
-        <img src="/imagenesproyecto/foto1.jpg">
-        <img src="/imagenesproyecto/foto1.jpg">
-
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-2"><img src="/imagenesproyecto/foto1.jpg" class="fotonosotros"></div>
+                <div class="col-lg-2"><img src="/imagenesproyecto/foto2.jpg" class="fotonosotros"></div>
+                <div class="col-lg-2"><img src="/imagenesproyecto/foto3.jpg" class="fotonosotros"></div>
+                <div class="col-lg-2"><img src="/imagenesproyecto/foto4.jpg" class="fotonosotros"></div>
+                <div class="col-lg-2"><img src="/imagenesproyecto/foto5.jpg" class="fotonosotros"></div>
+            </div>
+        </div>
     </section>
     <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto sit eveniet dolorem cum dicta, illo inventore officia minus iste aut placeat a expedita accusamus voluptas, quas nulla molestiae, accusantium sunt?</p>
-    <img src="" alt="" class="big">
-    <img src="" alt="" class="small">
-    <img src="" alt="" class="small">
-    <img src="" alt="" class="small">
-    <img src="" alt="" class="small">
     <h2 class="neon" id="reserva">Hace Tu Reserva</h2>
-        <form>
-            <label for="">Nombre</label>
-            <input type="text" placeholder="Escribe tu nombre" required>
-            <br>
-            <label for="">Apellido</label>
-            <input type="text" placeholder="Escribe tu apelllido">
-            <br>
-            <label for="correo">Correo</label>
-            <input type="mail" name="correo" placeholder="Escribe tu mail">
-            <br>
-            <label for="telefono">Telefono</label>
-            <input type="number" name="telefono" placeholder="Escriba su numero">
-            <br>
-            <label for="cantidad">Cantidad de Personas</label>
-            <input type="number" name="cantidad" placeholder="Cantidad de Personas">
-            <br>
-            <label for="fecha">Fecha</label>
-            <input type="date" name="fecha">
+        <form action="/action_page.php">
+            <div class="form-group">
+                <label for="">Nombre</label>
+                <input type="text" placeholder="Escribe tu nombre">
+            </div>
+            <div class="form-group">
+                <label for="">Apellido</label>
+                <input type="text" placeholder="Escribe tu apelllido">
+            </div>
+            <div class="form-group">
+                <label for="correo">Correo</label>
+                <input type="mail" name="correo" placeholder="Escribe tu mail">
+            </div>
+                <label for="telefono">Telefono</label>
+                <input type="number" name="telefono" placeholder="Escriba su numero">
+            <div class="form-group">
+                <label for="cantidad">Cantidad de Personas</label>
+                <input type="number" name="cantidad" placeholder="Cantidad de Personas">
+            </div>
+            <div class="form-group">
+                <label for="fecha">Fecha</label>
+                <input type="date" name="fecha">
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary enviar ">Enviar</button>
+            </div>
         </form>
         <section class="locate">
             <h2 class="neon" id="donde">Donde Encontrarnos</h2>
@@ -65,7 +72,7 @@
                     Domingos: 7:00-23:00
                 </p>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13135.383983241743!2d-58.3702778!3d-34.6080556!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe16921ef0545f86d!2sCasa%20Rosada!5e0!3m2!1ses!2sar!4v1649123357746!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13135.383983241743!2d-58.3702778!3d-34.6080556!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe16921ef0545f86d!2sCasa%20Rosada!5e0!3m2!1ses!2sar!4v1649123357746!5m2!1ses!2sar"  class="mapview nosotroslocate"     style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </section>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
