personalize las flechas del carrusel

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     </header>
     
         <section class="burgersind">
-            <div id="carousel1" class="carousel slide" data-ride="carousel" >
+            <div id="carousel1" class="carousel slide carousel-fade" data-ride="carousel" >
                 <ul class="carousel-indicators">
-                    <li data-target="#demo" data-slide-to="0" class="active"></li>
-                    <li data-target="#demo" data-slide-to="1"></li>
-                    <li data-target="#demo" data-slide-to="2"></li>
-                    <li data-target="#demo" data-slide-to="3"></li>
-                    <li data-target="#demo" data-slide-to="4"></li>
+                    <li data-slide-to="0" class="active"></li>
+                    <li data-slide-to="1"></li>
+                    <li data-slide-to="2"></li>
+                    <li data-slide-to="3"></li>
+                    <li data-slide-to="4"></li>
                 </ul>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -78,7 +78,7 @@
         </section>
         <section class="beers">
             <a href="/paginas/birras.html#patagonia" class="neon beerlogoind1" id="antind">Patagonia</a>
-            <div id="carousel2"class="carousel slide beerindimg1 " data-ride="carousel" >
+            <div id="carousel2"class="carousel slide carousel-fade beerindimg1 " data-ride="carousel" >
                 <div class="carousel-inner ">
                     <div class="carousel-item active carouselimgind">
                         <img src="/imagenesproyecto/pilsener.png"  alt="pilsener">
@@ -124,7 +124,7 @@
                 
                 </div>
             <a href="/paginas/birras.html#strange" class="neon beerlogoind2 " id="strangeind">StrangeBrewing</a>
-            <div id="carousel3"class="carousel slide beerindimg2 " data-ride="carousel" >
+            <div id="carousel3"class="carousel slide carousel-fade beerindimg2 " data-ride="carousel" >
             <div class="carousel-inner">
                 <div class="carousel-item active carouselimgind" >
                     <img src="imagenesproyecto/amigosdelpino.png"  alt="amigosdelpino" class="beersindimg">
