--- a/paginas/birras.html
+++ b/paginas/birras.html
@@ -10,6 +10,7 @@
     <title>Birras</title>
 </head>
 <body>
+    <!--Empieza Nav-->
     <header><h1><a href="../index.html"><span>B</span>ur<span>ga</span>s</a></h1>
         <nav class="barra">
             <ul>
@@ -20,7 +21,9 @@
             </ul>
         </nav>
     </header>
-        <h2 class="neon birrasneon" >Patagonia</h2>
+    <!-- Termina Nav-->
+    <!-- Empieza Columnas en Bootstrap de birras -->
+    <h2 class="neon birrasneon" >Patagonia</h2>
             <h3 class="preciosbirra">Precio: $450</h3>
             <section class="boxbirra" id="patagonia">
             <div class="container-fluid">
@@ -48,6 +51,7 @@
                     </div>
                 </div>
             </section>
+        <!-- Termina Columnas en Bootstrap de birras-->
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
