--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../estilos.css">  
 </head>
 <body>
+    <!--Empieza Nav-->
     <header><h1><a href="../index.html"><span>B</span>ur<span>ga</span>s</a></h1>
         <nav class="barra">
             <ul>
@@ -20,7 +21,10 @@
             </ul>
         </nav>
     </header>
+        <!-- Termina Nav-->
     <h2 class="neon" id="menuneon">Nuestras Hamburguesas</h2>
+    
+        <!-- Empieza Hamburguesas Menu-->
         <section class="burgermenu">
             <div class="burgersmenu1 nombreh nombreh1">Chikken</div>
             <div class="burgersmenu1 ingredientes ingredientes1">Lorem ipsum dolor sit amet.</div>
@@ -47,6 +51,8 @@
             <div class="burgersmenu1 ingredientes ingredientes5">Lorem ipsum dolor sit amet.</div>
             <div class="burgersmenu1 burgersmenuimg burgermenu5" id="hamburguesa5">Vegan</div>
         </section>
+        <!-- Termina Hamburguesas Menu-->
+        <!-- Empieza Guarnicion Menu-->
     <h2 class="neon guarnicionneon">Guarniciones</h2>
     <h3 class="preciosguar">Precio: $450</h3>
     <section class="guarnicion">
@@ -54,6 +60,7 @@
         <div><img src="../imagenesproyecto/papas.jpg" class="guar guar2"></div>
         <div><img src="../imagenesproyecto/papas.jpg" class="guar guar3"></div>
     </section> 
+        <!-- Termina Guarnicion-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
